[package]
name = "not_rusty_pdf"
description = "Crate adding text and images to existing pdf files"
version = "0.1.0"
authors = ["I'm not a clown, I promise <lewispersonalitiesgang@yandex.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pdf", "manipulation", "pdf-manipulation", "pdf-generation"]
categories = ["encoding", "graphics"]
repository = "https://github.com/definetely-not-a-clown/not_rusty_pdf"

[dependencies]
log = "0.4.14"
lopdf = { version = "0.31.0", features = [
    "chrono_time",
    "nom_parser",
    "embed_image"
], default-features = false }
png = "0.17.2"
imagesize = "0.9"
